feat: dynamic colors support

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,8 +30,7 @@
     android:layout_marginEnd="4dp"
     android:layout_marginBottom="4dp"
     android:text="@string/get_started"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:textColor="@color/primaryTextColor"
+    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -43,8 +42,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     android:text="@string/msg_create_new_project_greeting"
-    android:textAppearance="?android:attr/textAppearanceSmall"
-    android:textColor="@color/primaryTextColorLight"
+    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/getStarted" />
