--- a/app/src/main/res/layout/layout_diagnostic_group.xml
+++ b/app/src/main/res/layout/layout_diagnostic_group.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="?attr/colorSurface"
+  android:orientation="vertical"
+  tools:ignore="Overdraw">
+
+  <include
+    android:id="@+id/info"
+    layout="@layout/layout_diagnostic_item" />
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/diagnostics"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/content_background"
-    android:orientation="vertical"
-    tools:ignore="Overdraw">
-
-    <include
-        android:id="@+id/info"
-        layout="@layout/layout_diagnostic_item" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/diagnostics"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp" />
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    tools:listitem="@layout/layout_diagnostic_item" />
 
 </LinearLayout>
 
