--- a/app/src/main/res/layout/layout_filetree_item.xml
+++ b/app/src/main/res/layout/layout_filetree_item.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="8dp">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:gravity="center_vertical"
+  android:orientation="horizontal"
+  android:padding="8dp">
 
-    <ViewFlipper
-        android:id="@+id/chevronLoadingSwitcher"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="8dp">
-
-        <ImageView
-            android:id="@+id/filetree_chevron"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_chevron_right" />
-
-        <ProgressBar
-            android:id="@+id/loading_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true" />
-
-    </ViewFlipper>
+  <ViewFlipper
+    android:id="@+id/chevronLoadingSwitcher"
+    android:layout_width="20dp"
+    android:layout_height="20dp"
+    android:layout_marginEnd="8dp">
 
     <ImageView
-        android:id="@+id/filetree_icon"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginEnd="8dp" />
+      android:id="@+id/filetree_chevron"
+      android:layout_width="20dp"
+      android:layout_height="20dp"
+      android:src="@drawable/ic_chevron_right"
+      app:tint="?attr/colorPrimary" />
 
-    <TextView
-        android:id="@+id/filetree_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@color/primaryTextColor" />
+    <ProgressBar
+      android:id="@+id/loading_progress"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminate="true" />
+
+  </ViewFlipper>
+
+  <ImageView
+    android:id="@+id/filetree_icon"
+    android:layout_width="25dp"
+    android:layout_height="25dp"
+    android:layout_marginEnd="8dp"
+    app:tint="?attr/colorPrimary"
+    tools:src="@drawable/ic_language_java" />
+
+  <TextView
+    android:id="@+id/filetree_name"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+    android:textColor="?attr/colorOnSurface"
+    tools:text="@string/app_name" />
 
 </LinearLayout>
 
