--- a/app/src/main/res/layout/layout_popup_menu_item.xml
+++ b/app/src/main/res/layout/layout_popup_menu_item.xml
@@ -20,10 +20,9 @@
   style="@style/Widget.Material3.Button.TextButton.Icon"
   android:layout_width="48dp"
   android:layout_height="48dp"
-  android:background="@drawable/bg_ripple"
   android:clickable="true"
   android:drawablePadding="16dp"
-  android:drawableTint="@color/secondaryColor"
+  android:drawableTint="?attr/colorPrimary"
   android:focusable="true"
   android:gravity="start|center_vertical"
   android:paddingStart="16dp"
@@ -31,7 +30,6 @@
   android:paddingEnd="0dp"
   android:paddingBottom="4dp"
   android:textAllCaps="false"
-  android:textColor="@color/primaryTextColor"
   app:iconPadding="0dp"
-  app:iconTint="@color/secondaryColor"
+  app:iconTint="?attr/colorPrimary"
   tools:icon="@drawable/ic_code" />
