--- a/resources/src/main/res/layout/preference_widget_materialswitch.xml
+++ b/resources/src/main/res/layout/preference_widget_materialswitch.xml
@@ -20,5 +20,4 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="false"
-    android:focusable="false"
-    app:trackTint="@color/material_switch_track_tint" />
+    android:focusable="false"/>
