--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -17,7 +17,7 @@
       android:id="@+id/editor_appBarLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:backgroundTint="@color/primaryDarkColor"
+      android:background="?attr/colorSurface"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
       <com.google.android.material.appbar.MaterialToolbar
@@ -28,7 +28,6 @@
 
       <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/build_progress_indicator"
-        style="@style/AppTheme.ProgressIndicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true" />
@@ -44,7 +43,6 @@
         style="@style/AppTheme.TabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primaryDarkColor"
         app:tabGravity="start" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -54,7 +52,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="16dp"
-      android:background="@color/content_background"
+      android:background="?attr/colorSurface"
       app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
       <!--Views in this flipper are dynamically added and must be instances of CodeEditorView-->
@@ -63,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/editor_sheet_peek_height"
-        android:background="@color/content_background" />
+        android:background="?attr/colorSurface" />
 
       <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -74,8 +72,8 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
-          android:textColor="@color/secondaryTextColor"
-          android:textSize="30sp"
+          android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
+          android:textColor="?attr/colorOnSurface"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +87,7 @@
           android:layout_marginTop="8dp"
           android:gravity="center"
           android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-          android:textColor="@color/secondaryTextColor_light"
+          android:textColor="?attr/colorSecondaryVariant"
           android:textSize="13sp"
           app:layout_constraintEnd_toEndOf="@id/no_editor_title"
           app:layout_constraintStart_toStartOf="@id/no_editor_title"
@@ -120,8 +118,6 @@
     android:layout_height="match_parent"
     android:layout_gravity="start"
     app:headerLayout="@layout/layout_nav_header"
-    app:itemIconTint="@color/primaryIconColor"
-    app:itemTextColor="@color/primaryTextColor"
     app:menu="@menu/menu_editor_nav" />
 
   <com.google.android.material.navigation.NavigationView
