--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="?attr/colorPrimaryDark"
     android:gravity="center"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
@@ -29,9 +28,7 @@
         android:focusable="false"
         android:gravity="center"
         android:text="@string/app_name"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="24sp"
+        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         android:textStyle="bold" />
 
     </RelativeLayout>
