--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -1,63 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/linearLayout3"
-    android:layout_width="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/linearLayout3"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical">
+
+  <ImageView
+    android:id="@+id/contentIconView"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_marginStart="16dp"
+    android:visibility="gone"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@id/contentTextView" />
 
-    <ImageView
-        android:id="@+id/contentIconView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/contentTextView" />
+  <TextView
+    android:id="@+id/contentTextView"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="24dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="8dp"
+    android:alpha="0.8"
+    android:letterSpacing="0.02"
+    android:lineSpacingExtra="7sp"
+    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+    app:layout_constraintBottom_toTopOf="@+id/rightButton"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/contentIconView"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="Sync the project." />
 
-    <TextView
-        android:id="@+id/contentTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:alpha="0.8"
-        android:letterSpacing="0.02"
-        android:lineSpacingExtra="7sp"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/rightButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/contentIconView"
-        app:layout_constraintTop_toTopOf="parent" />
+  <com.google.android.material.button.MaterialButton
+    android:id="@+id/leftButton"
+    style="@style/Widget.Material3.Button.TextButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintBottom_toBottomOf="@+id/rightButton"
+    app:layout_constraintEnd_toStartOf="@+id/rightButton"
+    app:layout_constraintTop_toTopOf="@+id/rightButton"
+    tools:text="Cancel" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/leftButton"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/rightButton"
-        app:layout_constraintEnd_toStartOf="@+id/rightButton"
-        app:layout_constraintTop_toTopOf="@+id/rightButton"
-        app:rippleColor="@color/primaryDarkColor" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/rightButton"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="9dp"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:rippleColor="@color/primaryDarkColor" />
+  <com.google.android.material.button.MaterialButton
+    android:id="@+id/rightButton"
+    style="@style/Widget.Material3.Button.TextButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="9dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    tools:text="Sync" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
