--- a/app/src/main/res/layout/layout_diagnostic_info.xml
+++ b/app/src/main/res/layout/layout_diagnostic_info.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/msg"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:textColor="@color/primaryTextColor"
-    android:textIsSelectable="true"
-    android:textSize="11sp" />
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/msg"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content"
+  android:padding="8dp"
+  android:textColor="?attr/colorOnPrimaryContainer"
+  android:textIsSelectable="true"
+  android:textSize="11sp"
+  tools:background="?attr/colorPrimaryContainer"
+  tools:text="';' expected" />
