--- a/app/src/main/res/layout/layout_diagnostic_item.xml
+++ b/app/src/main/res/layout/layout_diagnostic_item.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:clickable="true"
+  android:descendantFocusability="blocksDescendants"
+  android:focusable="true"
+  android:foreground="?attr/selectableItemBackground"
+  android:gravity="top|start"
+  android:orientation="horizontal"
+  android:paddingStart="16dp"
+  android:paddingTop="8dp"
+  android:paddingEnd="16dp"
+  android:paddingBottom="8dp"
+  tools:ignore="UnusedAttribute">
+
+  <ImageView
+    android:id="@+id/icon"
+    android:layout_width="30dp"
+    android:layout_height="30dp"
+    android:layout_marginEnd="16dp"
+    android:scaleType="center"
+    app:tint="?attr/colorPrimary"
+    tools:src="@drawable/ic_error" />
+
+  <TextView
+    android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/content_background"
-    android:clickable="true"
-    android:descendantFocusability="blocksDescendants"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:gravity="top|start"
-    android:orientation="horizontal"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="8dp"
-    tools:ignore="UnusedAttribute">
-
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="16dp"
-        android:scaleType="center" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="15sp" />
+    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+    tools:text="Diagnostic message" />
 
 </LinearLayout>
 
