--- a/app/src/main/res/layout/layout_find_in_file.xml
+++ b/app/src/main/res/layout/layout_find_in_file.xml
@@ -17,9 +17,10 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:background="@color/primaryDarkColor">
+  android:background="?attr/colorPrimaryContainer">
 
   <EditText
     android:id="@+id/search_input"
@@ -35,7 +36,8 @@
     android:maxLines="1"
     app:layout_constraintEnd_toStartOf="@id/more_options"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="AndroidIDE" />
 
   <androidx.appcompat.widget.AppCompatImageButton
     android:id="@+id/more_options"
@@ -44,7 +46,7 @@
     android:layout_marginEnd="8dp"
     android:background="@android:color/transparent"
     android:src="@drawable/ic_more_vert_black_20dp"
-    android:tint="@color/primaryIconColor"
+    android:tint="?attr/colorPrimary"
     app:layout_constraintBottom_toBottomOf="@id/search_input"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/search_input"
@@ -58,13 +60,10 @@
     android:layout_height="40dp"
     android:text="@string/previous"
     android:textAllCaps="true"
-
-    android:textColor="@color/primaryTextColor"
     app:layout_constraintEnd_toStartOf="@+id/next"
     app:layout_constraintHorizontal_weight="0.25"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/search_input"
-    app:rippleColor="@color/secondaryColor" />
+    app:layout_constraintTop_toBottomOf="@+id/search_input" />
 
 
   <com.google.android.material.button.MaterialButton
@@ -74,13 +73,11 @@
     android:layout_height="40dp"
     android:text="@string/next"
     android:textAllCaps="true"
-    android:textColor="@color/primaryTextColor"
     app:layout_constraintEnd_toStartOf="@+id/replace"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintHorizontal_weight="0.25"
     app:layout_constraintStart_toEndOf="@+id/prev"
-    app:layout_constraintTop_toBottomOf="@+id/search_input"
-    app:rippleColor="@color/secondaryColor" />
+    app:layout_constraintTop_toBottomOf="@+id/search_input" />
 
   <com.google.android.material.button.MaterialButton
     android:id="@+id/replace"
@@ -89,13 +86,11 @@
     android:layout_height="40dp"
     android:text="@string/replace"
     android:textAllCaps="true"
-    android:textColor="@color/primaryTextColor"
     app:layout_constraintEnd_toStartOf="@+id/close"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintHorizontal_weight="0.25"
     app:layout_constraintStart_toEndOf="@+id/next"
-    app:layout_constraintTop_toBottomOf="@+id/search_input"
-    app:rippleColor="@color/secondaryColor" />
+    app:layout_constraintTop_toBottomOf="@+id/search_input" />
 
   <com.google.android.material.button.MaterialButton
     android:id="@+id/close"
@@ -104,12 +99,10 @@
     android:layout_height="40dp"
     android:text="@string/btn_close"
     android:textAllCaps="true"
-    android:textColor="@color/primaryTextColor"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintHorizontal_weight="0.25"
     app:layout_constraintStart_toEndOf="@+id/replace"
-    app:layout_constraintTop_toBottomOf="@+id/search_input"
-    app:rippleColor="@color/secondaryColor" />
+    app:layout_constraintTop_toBottomOf="@+id/search_input" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
