--- a/app/src/main/res/layout/layout_search_result_item.xml
+++ b/app/src/main/res/layout/layout_search_result_item.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="?attr/selectableItemBackground"
+  android:clickable="true"
+  android:descendantFocusability="blocksDescendants"
+  android:focusable="true"
+  android:gravity="top|start"
+  android:paddingStart="16dp"
+  android:paddingTop="8dp"
+  android:paddingEnd="16dp"
+  android:paddingBottom="8dp"
+  tools:ignore="UnusedAttribute">
+
+  <TextView
+    android:id="@+id/text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/content_background"
-    android:clickable="true"
-    android:descendantFocusability="blocksDescendants"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:gravity="top|start"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="8dp"
-    tools:ignore="UnusedAttribute">
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="16sp" />
+    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+    android:textSize="16sp"
+    tools:text="@string/app_name" />
 
 </RelativeLayout>
