--- a/app/src/main/res/layout/layout_text_size_slider.xml
+++ b/app/src/main/res/layout/layout_text_size_slider.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical"
+  android:paddingStart="16dp"
+  android:paddingTop="8dp"
+  android:paddingEnd="16dp"
+  android:paddingBottom="8dp">
+
+  <com.google.android.material.slider.Slider
+    android:id="@+id/slider"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="8dp">
-
-    <com.google.android.material.slider.Slider
-        android:id="@+id/slider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stepSize="1.0"
-        android:value="14.0"
-        android:valueFrom="6.0"
-        android:valueTo="32.0"
-        app:haloColor="@color/secondaryLightColor"
-        app:thumbColor="@color/secondaryColor"
-        app:thumbElevation="4dp"
-        app:trackColorActive="@color/secondaryColor" />
+    android:stepSize="1.0"
+    android:value="14.0"
+    android:valueFrom="6.0"
+    android:valueTo="32.0"
+    app:thumbElevation="4dp" />
 
 </LinearLayout>
 
