--- a/app/src/main/res/layout/wizard_details.xml
+++ b/app/src/main/res/layout/wizard_details.xml
@@ -11,15 +11,13 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:hint="@string/project_app_name"
-    android:theme="@style/AppTheme.TextInputLayout"
     app:counterEnabled="true"
     app:counterMaxLength="20"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:placeholderText="My Application"
-    app:startIconDrawable="@drawable/ic_android"
-    app:startIconTint="@color/primaryIconColor">
+    app:startIconDrawable="@drawable/ic_android">
 
     <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/et_app_name"
@@ -37,15 +35,13 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:hint="@string/package_name"
-    android:theme="@style/AppTheme.TextInputLayout"
     app:counterEnabled="true"
     app:counterMaxLength="40"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_app_name"
     app:placeholderText="com.example.myapplication"
-    app:startIconDrawable="@drawable/ic_package"
-    app:startIconTint="@color/primaryIconColor">
+    app:startIconDrawable="@drawable/ic_package">
 
     <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/et_package_name"
@@ -63,7 +59,6 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:hint="@string/wizard_save_location"
-    android:theme="@style/AppTheme.TextInputLayout"
     app:endIconDrawable="@drawable/ic_folder"
     app:endIconMode="custom"
     app:layout_constraintEnd_toEndOf="parent"
@@ -89,12 +84,11 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/wizard_language"
-    android:theme="@style/AppTheme.TextInputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_save_location">
 
-    <AutoCompleteTextView
+    <com.google.android.material.textfield.MaterialAutoCompleteTextView
       android:id="@+id/et_language"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -111,13 +105,12 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/wizard_toolchain"
-    android:theme="@style/AppTheme.TextInputLayout"
     android:visibility="gone"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_language">
 
-    <AutoCompleteTextView
+    <com.google.android.material.textfield.MaterialAutoCompleteTextView
       android:id="@+id/et_toolchain"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -134,14 +127,12 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/minimum_sdk"
-    android:theme="@style/AppTheme.TextInputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_toolchain"
-    app:startIconDrawable="@drawable/ic_min_sdk"
-    app:startIconTint="@color/primaryIconColor">
+    app:startIconDrawable="@drawable/ic_min_sdk">
 
-    <AutoCompleteTextView
+    <com.google.android.material.textfield.MaterialAutoCompleteTextView
       android:id="@+id/et_min_sdk"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -158,14 +149,12 @@
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
     android:hint="@string/target_sdk"
-    android:theme="@style/AppTheme.TextInputLayout"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/til_min_sdk"
-    app:startIconDrawable="@drawable/ic_target_sdk"
-    app:startIconTint="@color/primaryIconColor">
+    app:startIconDrawable="@drawable/ic_target_sdk">
 
-    <AutoCompleteTextView
+    <com.google.android.material.textfield.MaterialAutoCompleteTextView
       android:id="@+id/et_target_sdk"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
