--- a/common/src/main/res/layout/layout_divider_horizontal.xml
+++ b/common/src/main/res/layout/layout_divider_horizontal.xml
@@ -25,7 +25,7 @@
   android:layout_marginStart="16dp"
   android:layout_marginTop="16dp"
   android:layout_marginEnd="16dp"
-  android:background="@color/primaryLightColor"
+  android:background="?attr/colorOutline"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toStartOf="parent"
   app:layout_constraintTop_toTopOf="parent"
