--- a/common/src/main/res/layout/layout_nav_header.xml
+++ b/common/src/main/res/layout/layout_nav_header.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/primaryColor"
-    tools:ignore="Overdraw">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="200dp"
+  android:background="?attr/colorPrimaryContainer"
+  tools:ignore="Overdraw">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo"
-        android:src="@drawable/ic_launcher_main" />
+  <com.google.android.material.imageview.ShapeableImageView
+    android:id="@+id/icon"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:layout_centerVertical="true"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:src="@drawable/ic_launcher_main"
+    app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/icon"
-        android:elevation="8dp"
-        android:text="@string/app_name"
-        android:textColor="@color/primaryTextColor"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+  <TextView
+    android:id="@+id/title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_toEndOf="@id/icon"
+    android:elevation="8dp"
+    android:text="@string/app_name"
+    android:textColor="?attr/colorOnPrimaryContainer"
+    android:textSize="20sp"
+    android:textStyle="bold" />
 
 </RelativeLayout>
 
