--- a/resources/src/main/res/drawable/bg_design_container_background.xml
+++ b/resources/src/main/res/drawable/bg_design_container_background.xml
@@ -17,20 +17,20 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <!-- Pressed -->
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <stroke android:width="1dp" android:color="@android:color/white" android:dashWidth="0dp" android:dashGap="0dp" />
-        </shape>
-    </item>
+  <!-- Pressed -->
+  <item android:state_pressed="true">
+    <shape android:shape="rectangle">
+      <solid android:color="@android:color/transparent" />
+      <stroke android:width="1dp" android:color="?attr/colorPrimary" android:dashWidth="0dp" android:dashGap="0dp" />
+    </shape>
+  </item>
 
-    <!-- Normal -->
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
-            <stroke android:width="1dp" android:color="@color/primaryLightColor" android:dashWidth="5dp" android:dashGap="5dp" />
-        </shape>
-    </item>
+  <!-- Normal -->
+  <item>
+    <shape android:shape="rectangle">
+      <solid android:color="@android:color/transparent" />
+      <stroke android:width="1dp" android:color="?attr/colorOutline" android:dashWidth="5dp" android:dashGap="5dp" />
+    </shape>
+  </item>
 
 </selector>
