--- a/resources/src/main/res/drawable/bg_designer_view.xml
+++ b/resources/src/main/res/drawable/bg_designer_view.xml
@@ -20,7 +20,7 @@
   <solid android:color="@android:color/transparent"/>
   <stroke
     android:width="1dp"
-    android:color="@color/secondaryColor"
+    android:color="?attr/colorPrimary"
     android:dashWidth="5dp"
     android:dashGap="5dp" />
 </shape>
