--- a/resources/src/main/res/drawable/bg_shadow.xml
+++ b/resources/src/main/res/drawable/bg_shadow.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <gradient
-                android:angle="270"
-                android:endColor="@android:color/transparent"
-                android:startColor="@color/primaryDarkColor"
-                android:type="linear" />
-        </shape>
-    </item>
+  <item>
+    <shape android:shape="rectangle">
+      <gradient
+        android:angle="270"
+        android:endColor="@android:color/transparent"
+        android:startColor="?attr/colorPrimaryDark"
+        android:type="linear" />
+    </shape>
+  </item>
 </layer-list>
