--- a/resources/src/main/res/values/styles.xml
+++ b/resources/src/main/res/values/styles.xml
@@ -15,109 +15,82 @@
   ~   along with AndroidIDE.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-  <style name="Theme.AndroidIDE.Base" parent="Theme.Material3.Dark.NoActionBar">
+  <style name="Theme.AndroidIDE.Material" parent="Theme.Material3.Light.NoActionBar">
+    <item name="colorPrimary">@color/md_theme_light_primary</item>
+    <item name="colorPrimaryDark">@color/md_theme_light_background</item>
+    <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
+    <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
+    <item name="colorOnPrimaryContainer">@color/md_theme_light_onPrimaryContainer</item>
+    <item name="colorSecondary">@color/md_theme_light_secondary</item>
+    <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
+    <item name="colorSecondaryContainer">@color/md_theme_light_secondaryContainer</item>
+    <item name="colorOnSecondaryContainer">@color/md_theme_light_onSecondaryContainer</item>
+    <item name="colorTertiary">@color/md_theme_light_tertiary</item>
+    <item name="colorOnTertiary">@color/md_theme_light_onTertiary</item>
+    <item name="colorTertiaryContainer">@color/md_theme_light_tertiaryContainer</item>
+    <item name="colorOnTertiaryContainer">@color/md_theme_light_onTertiaryContainer</item>
+    <item name="colorError">@color/md_theme_light_error</item>
+    <item name="colorErrorContainer">@color/md_theme_light_errorContainer</item>
+    <item name="colorOnError">@color/md_theme_light_onError</item>
+    <item name="colorOnErrorContainer">@color/md_theme_light_onErrorContainer</item>
+    <item name="android:colorBackground">@color/md_theme_light_background</item>
+    <item name="colorOnBackground">@color/md_theme_light_onBackground</item>
+    <item name="colorSurface">@color/md_theme_light_surface</item>
+    <item name="colorOnSurface">@color/md_theme_light_onSurface</item>
+    <item name="colorSurfaceVariant">@color/md_theme_light_surfaceVariant</item>
+    <item name="colorOnSurfaceVariant">@color/md_theme_light_onSurfaceVariant</item>
+    <item name="colorOutline">@color/md_theme_light_outline</item>
+    <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
+    <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
+    <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
+  </style>
+
+  <style name="Theme.AndroidIDE.Base" parent="Theme.AndroidIDE.Material">
     <!--    Colors    -->
-    <item name="colorPrimary">@color/primaryColor</item>
-    <item name="colorPrimaryDark">@color/primaryDarkColor</item>
-    <item name="colorOnPrimary">@color/secondaryDarkColor</item>
-    <item name="colorPrimaryContainer">@color/secondaryColor</item>
-    <item name="colorAccent">@color/secondaryColor</item>
-    <item name="colorSurface">@color/surfaceColor</item>
-    <item name="colorButtonNormal">@color/secondaryColor</item>
-    <item name="colorControlNormal">@color/secondaryColor</item>
-    <item name="colorControlHighlight">@color/rippleHighlightColor</item>
-    <item name="hintTextColor">@color/secondaryColor</item>
-    <item name="android:textColorLink">@color/secondaryColor</item>
-    <item name="android:colorButtonNormal">@color/secondaryColor</item>
-    <item name="android:textColorSecondary">@color/secondaryTextColor</item>
     <item name="android:textCursorDrawable">@drawable/textfield_cursor</item>
 
     <!--    Font    -->
     <item name="fontFamily">@font/josefin_sans</item>
     <item name="android:fontFamily">@font/josefin_sans</item>
-
-    <!--    Window configuration    -->
-    <item name="android:windowBackground">@color/content_background</item>
-    <item name="windowActionModeOverlay">true</item>
-    <item name="windowActionBarOverlay">true</item>
   </style>
 
   <style name="Theme.AndroidIDE.Styled" parent="Theme.AndroidIDE.Base">
-    <item name="checkboxStyle">@style/AppTheme.CheckBox</item>
-    <item name="actionOverflowButtonStyle">@style/AppTheme.Toolbar.OverflowButton</item>
-    <item name="chipStyle">@style/AppTheme.UIDesigner.WidgetGroupChip</item>
     <item name="switchPreferenceStyle">@style/AppTheme.SwitchPreference</item>
     <item name="shapeAppearanceLargeComponent">@style/AppTheme.ShapeOverlay.Large</item>
+    <item name="textAppearanceBodySmall">@style/TextAppearance.AndroidIDE.BodySmall</item>
   </style>
 
-  <style name="Theme.AndroidIDE" parent="Theme.AndroidIDE.Styled" />
+  <style name="Theme.AndroidIDE" parent="Theme.AndroidIDE.Styled">
+    <item name="android:navigationBarColor">?attr/colorPrimaryContainer</item>
+    <item name="android:windowLightStatusBar">true</item>
+  </style>
+
+  <style name="TextAppearance.AndroidIDE.BodySmall" parent="TextAppearance.Material3.BodySmall">
+    <item name="android:textColor">@color/material_on_background_disabled</item>
+  </style>
 
   <style name="AppTheme.Splash" parent="Theme.SplashScreen">
-    <item name="windowSplashScreenBackground">@color/primaryColor</item>
+    <item name="windowSplashScreenBackground">@color/md_theme_light_background</item>
     <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_animated</item>
     <item name="windowSplashScreenAnimationDuration">200</item>
     <item name="postSplashScreenTheme">@style/Theme.AndroidIDE</item>
-    <item name="android:statusBarColor">@color/primaryColor</item>
-    <item name="android:navigationBarColor">@color/primaryColor</item>
-    <item name="android:windowLightStatusBar">false</item>
   </style>
 
   <style name="AppTheme.SwitchPreference" parent="Preference.SwitchPreference.Material">
     <item name="android:widgetLayout">@layout/preference_widget_materialswitch</item>
   </style>
 
-  <style name="AppTheme.CheckBox" parent="Widget.Material3.CompoundButton.CheckBox">
-    <item name="buttonTint">@color/secondaryColor</item>
-  </style>
-
-  <style name="AppTheme.Button" parent="Widget.Material3.Button">
-    <item name="backgroundTint">@color/bg_button</item>
-    <item name="rippleColor">@color/secondaryLightColor_transparent</item>
-    <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Button</item>
-    <item name="android:textColor">@color/primaryTextColor</item>
-  </style>
-
-  <style name="AppTheme.ProgressIndicator" parent="Widget.Material3.LinearProgressIndicator">
-    <item name="indicatorColor">@color/secondaryColor</item>
-  </style>
-
-  <style name="AppTheme.UIDesigner.WidgetGroupChip" parent="Widget.Material3.Chip.Filter">
-    <item name="chipIconTint">@color/primaryIconColor</item>
-    <item name="chipBackgroundColor">@color/primaryColor</item>
-    <item name="chipStrokeColor">@color/secondaryColor</item>
-    <item name="chipStrokeWidth">1dp</item>
-  </style>
-
-  <style name="AppTheme.Toolbar.OverflowButton" parent="@style/Widget.AppCompat.ActionButton.Overflow">
-    <item name="android:tint">@color/secondaryColor</item>
-  </style>
-
-  <style name="AppTheme.MaterialToggleButton" parent="">
-    <item name="colorPrimary">@color/secondaryColor</item>
-  </style>
-
   <style name="AppTheme.TabLayout" parent="Widget.Material3.TabLayout">
     <item name="tabIndicatorAnimationMode">elastic</item>
-    <item name="tabIndicatorColor">@color/secondaryColor</item>
     <item name="tabIndicatorFullWidth">false</item>
     <item name="tabIndicatorGravity">bottom</item>
     <item name="tabIndicatorHeight">3dp</item>
     <item name="tabMode">scrollable</item>
-    <item name="tabSelectedTextColor">@color/secondaryColor</item>
-    <item name="tabTextAppearance">@style/AppTheme.TabLayout.Title</item>
-    <item name="tabTextColor">@color/secondaryTextColor_light</item>
   </style>
 
   <style name="AppTheme.TabLayout.Title" parent="TextAppearance.Design.Tab">
     <item name="textAllCaps">false</item>
     <item name="android:textAllCaps">false</item>
-  </style>
-
-  <style name="AppTheme.TextInputLayout" parent="">
-    <item name="colorPrimary">@color/secondaryColor</item>
-    <item name="boxStrokeColor">@color/textfield_stroke_color</item>
-    <item name="android:textColorHint">@color/textfield_label_color</item>
-    <item name="hintTextColor">@color/textfield_label_color</item>
   </style>
 
   <style name="AppTheme.ShapeOverlay.Large" parent="">
@@ -133,54 +106,15 @@
     <item name="cornerSize">25dp</item>
   </style>
 
-  <style name="AppTheme.BottomSheetDialog" parent="Theme.Material3.Dark.BottomSheetDialog">
-    <item name="android:windowIsFloating">false</item>
-    <item name="android:windowLightStatusBar">false</item>
-  </style>
-
   <!-- Alert Dialog -->
   <style name="AppTheme.MaterialAlertDialog" parent="@style/ThemeOverlay.Material3.MaterialAlertDialog">
     <item name="shapeAppearanceOverlay">@style/MaterialDialog.ShapeAppearance</item>
-    <item name="materialAlertDialogTitleTextStyle">@style/MaterialDialog.Title.Text</item>
-    <item name="materialAlertDialogBodyTextStyle">@style/MaterialDialog.Body.Text</item>
-    <item name="buttonBarPositiveButtonStyle">@style/MaterialAlertDialog.PositiveButtonStyle</item>
-    <item name="buttonBarNegativeButtonStyle">@style/MaterialAlertDialog.NegativeButtonStyle</item>
-    <item name="buttonBarNeutralButtonStyle">@style/MaterialAlertDialog.NeutralButtonStyle</item>
     <item name="android:windowEnterAnimation">@animator/dialog_in</item>
     <item name="android:windowExitAnimation">@animator/dialog_out</item>
   </style>
 
   <style name="MaterialDialog.ShapeAppearance" parent="">
     <item name="cornerSize">28dp</item>
-  </style>
-
-  <style name="MaterialDialog.Title.Text" parent="@style/MaterialAlertDialog.Material3.Title.Text">
-    <item name="android:textColor">@color/primaryTextColor</item>
-    <item name="android:textStyle">bold</item>
-    <item name="fontFamily">@font/josefin_sans</item>
-  </style>
-
-  <style name="MaterialDialog.Body.Text" parent="@style/MaterialAlertDialog.Material3.Body.Text">
-    <item name="android:textColor">@color/primaryTextColor</item>
-    <item name="fontFamily">@font/josefin_sans</item>
-  </style>
-
-  <style name="MaterialAlertDialog.PositiveButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
-    <item name="android:textColor">@color/secondaryColor</item>
-    <item name="backgroundTint">@android:color/transparent</item>
-    <item name="fontFamily">@font/josefin_sans</item>
-  </style>
-
-  <style name="MaterialAlertDialog.NegativeButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
-    <item name="android:textColor">@color/secondaryColor</item>
-    <item name="backgroundTint">@android:color/transparent</item>
-    <item name="fontFamily">@font/josefin_sans</item>
-  </style>
-
-  <style name="MaterialAlertDialog.NeutralButtonStyle" parent="@style/Widget.Material3.Button.TextButton.Dialog">
-    <item name="android:textColor">@color/secondaryColor</item>
-    <item name="backgroundTint">@android:color/transparent</item>
-    <item name="fontFamily">@font/josefin_sans</item>
   </style>
 
   <style name="PopupAnimation">
