--- a/uidesigner/src/main/res/layout/layout_view_info_header.xml
+++ b/uidesigner/src/main/res/layout/layout_view_info_header.xml
@@ -37,6 +37,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+    android:textColor="?attr/colorOnSurface"
     app:layout_constraintStart_toStartOf="@id/name"
     app:layout_constraintTop_toBottomOf="@id/name"
     tools:text="android.widget.TextView" />
